challenge BAR css fix
removed scrollbar (mobile version)
&::-webkit-scrollbar{
     display: none;
}

--- a/custom.scss
+++ b/custom.scss
@@ -364,6 +364,9 @@ nav.challenge-bar {
                 text-decoration: none;
                 min-width: 100px;
             }
+            &::-webkit-scrollbar{
+                display: none;
+            }
         }
 
     }
